# stock_modeling

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
api/: package-lock.json  package.json  server.js
src/: App.tsx  Layout.tsx  main.tsx  types.tsx  useChartData.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: indicators.rs  main.rs
src-tauri/src/models/: mod.rs  stock_data.rs  stock_model.rs
src-tauri/src/test/: fetch_stock_from_api.rs  mod.rs
src-tauri/src/types/: mod.rs
src-tauri/src/utils/: backtest_utils.rs  fetch_stock_utils.rs  indicator_utils.rs  init_data_utils.rs  mod.rs
src/components/: Backtest.tsx  Chart.tsx  ChartComponent.tsx  Indicators.tsx  Menu.tsx  SearchBar.tsx  Sidebar.tsx
src/components/utils/: BacktestUtils.ts  ChartUtil.ts  IndicatorUtil.ts  OutsideClick.ts
src/constants/: data.tsx
src/contexts/: ChartDataContext.tsx  ThemeContext.tsx
src/store/: atoms.ts  backtest.ts  chartdata.ts  indicators.ts  labels.ts  search.ts  sidebar.ts  theme.ts  timestamp.ts
src/utils/: convertToUTCTimestamp.ts
